# clevo_gtk4ui

./: .gitignore  Cargo.toml  build-deb.sh  com.tuxedo.Control.service  setup-debian-packaging.sh  tuxedo-daemon.conf  Новый файл
.github/workflows/: rust.yml
common/: Cargo.toml
common/src/: types.rs
daemon/: Cargo.toml  com.tuxedo.Control.conf  com.tuxedo.Control.service  tuxedo-daemon.service
daemon/src/: battery_control.rs  dbus_interface.rs  fan_daemon.rs  hardware_control.rs  hardware_detection.rs  main.rs  tuxedo_io.rs
data/: com.tuxedo.Control.conf  com.tuxedo.Control.service  com.tuxedo.ControlCenter.desktop
debian/: changelog  com.tuxedo.Control.conf  com.tuxedo.Control.service  control  copyright  postinst  postrm  prerm  rules  tuxedo-control-center.desktop  tuxedo-daemon.service
gui/: Cargo.toml
gui/data/: style.css
gui/src/: app.rs  application.rs  config.rs  dbus_client.rs  keyboard_shortcuts.rs  main.rs  system_tray.rs  theme.rs
gui/src/egui_ui/: app.rs  mod.rs  profiles_page.rs  settings_page.rs  statistics_page.rs  tuning_page.rs
gui/src/pages/: mod.rs  profiles.rs  settings.rs  statistics.rs  tuning.rs
gui/src/ui/: fan_curve_editor  fan_curve_editor.rs  mod.rs  profiles_page.rs  settings_page.rs  statistics_page.rs  tuning_page.rs  window.rs
gui/src/widgets/: fan_curve_editor.rs  mod.rs
