[package]
name = "tuxedo-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuxedo-common = { path = "../common" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
smartmontools = "0.1"
env_logger = "0.11"
zbus = "4.0"
tokio = { version = "1", features = ["full"] }
libc = "0.2"
