[package]
name = "tuxedo-control-center"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tuxedo-common = { path = "../common" }
zbus = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
# tokio = { version = "1", features = ["rt-multi-thread"] }
env_logger = "0.11"  # or the latest version
log = "0.4"
egui = { workspace = true }
eframe = { workspace = true }