[package]
name = "tuxedo-control-center"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Core egui
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29" }
egui_plot = "0.29.0"

# Your existing dependencies
tuxedo-common = { path = "../common" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
rfd = "0.15"

# Async for DBus
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
zbus = "4.0"

# Time handling
chrono = "0.4"
tray-icon = "0.18"

# System statistics
systemstat = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
